# plantao_noticias_b3

./: pyproject.toml
plantao_noticias_b3/: __init__.py  core.py  news_functions.py  utils.py
