[tool.poetry]
name = "plantao-noticias-b3"
version = "0.1.0"
description = ""
authors = ["renanmoretto <himynameisrenan@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "plantao_noticias_b3"}]
repository = "https://github.com/renanmoretto/sinacor_negs"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
